Add bulk ratings endpoint to OpenAPI spec
