# app/schemas.py
@@ -1,14 +1,14 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2026-04-11T22:08:18+00:00
+#   timestamp: 2026-04-12T05:14:05+00:00
 
 from __future__ import annotations
 
 from pydantic import BaseModel, Field
 
 
-class InstanceWithKey(BaseModel):
-    instanceId: str | None = None
+class CatalogWithKey(BaseModel):
+    catalogId: str | None = None
     secretKey: str | None = None
 
 
@@ -46,11 +46,6 @@ class Recommendation(BaseModel):
 
 class Error(BaseModel):
     reason: str
-
-
-class InstanceRegistration(BaseModel):
-    catalog: list[Product]
-    ratings: list[Rating]
 
 
 class BulkProductResult(BaseModel):
